--- a/ci/docker/nginx-jar/nginx.conf
+++ b/ci/docker/nginx-jar/nginx.conf
@@ -21,6 +21,14 @@ server {
             proxy_buffers           32 4k;
     }
 
+    location /favicon.ico {
+            proxy_pass              http://localhost:8080/api/assets/favicon.ico;
+            proxy_redirect          default;
+            proxy_connect_timeout   90;
+            proxy_send_timeout      90;
+            proxy_read_timeout      90;
+    }
+
     location /snowstorm/ {
             # error_log /var/log/nginx/error.log debug; # testing only; remove for production use
             proxy_http_version 1.1;
