--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -46,15 +46,15 @@
 		"@angular/cli": "~9.1.9",
 		"@angular/compiler-cli": "~9.0.7",
 		"@angular/language-service": "~9.0.7",
-		"@types/node": "^12.11.1",
 		"@types/jasmine": "~3.5.0",
 		"@types/jasminewd2": "~2.0.3",
+		"@types/node": "^12.11.1",
 		"codelyzer": "^5.1.2",
 		"jasmine-core": "~3.5.0",
 		"jasmine-spec-reporter": "~4.2.1",
 		"karma": "~4.3.0",
-		"karma-chrome-launcher": "~3.1.0",
 		"karma-coverage-istanbul-reporter": "~2.1.0",
+		"karma-firefox-launcher": "~2.1.0",
 		"karma-jasmine": "~2.0.1",
 		"karma-jasmine-html-reporter": "^1.4.2",
 		"protractor": "~5.4.3",
