--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -1,65 +1,66 @@
 {
-	"name": "hsi",
-	"version": "0.0.0",
-	"scripts": {
-		"ng": "ng",
-		"start": "ng serve --proxy-config src/proxy.conf.json",
-		"build": "ng build",
-		"build:prod": "ng build --prod --base-href /",
-		"test": "ng test",
-		"lint": "ng lint --tslint-config=tslint-ci.json",
-		"lint:fix": "ng lint --fix --tslint-config=tslint-ci.json",
-		"e2e": "ng e2e"
-	},
-	"private": true,
-	"dependencies": {
-		"@angular/animations": "~9.0.7",
-		"@angular/cdk": "^9.2.4",
-		"@angular/common": "~9.0.7",
-		"@angular/compiler": "~9.0.7",
-		"@angular/core": "~9.0.7",
-		"@angular/flex-layout": "^9.0.0-beta.31",
-		"@angular/forms": "~9.0.7",
-		"@angular/material": "^9.2.4",
-		"@angular/material-moment-adapter": "^9.2.1",
-		"@angular/platform-browser": "~9.0.7",
-		"@angular/platform-browser-dynamic": "~9.0.7",
-		"@angular/router": "~9.0.7",
-		"@angular/service-worker": "~9.0.7",
-		"@ngx-translate/core": "^12.1.2",
-		"@ngx-translate/http-loader": "^4.0.0",
-		"@types/file-saver": "^2.0.1",
-		"angular-calendar": "^0.28.16",
-		"angular-file-saver": "^1.1.3",
-		"date-fns": "^2.14.0",
-		"jwt-decode": "^3.1.2",
-		"moment": "^2.24.0",
-		"ng-recaptcha": "^5.0.0",
-		"ngx-moment": "^3.5.0",
-		"ngx-translate-multi-http-loader": "^3.0.0",
-		"rxjs": "~6.5.4",
-		"tslib": "^1.10.0",
-		"zone.js": "~0.10.2"
-	},
-	"devDependencies": {
-		"@angular-devkit/build-angular": "^0.901.7",
-		"@angular/cli": "~9.1.9",
-		"@angular/compiler-cli": "~9.0.7",
-		"@angular/language-service": "~9.0.7",
-		"@types/node": "^12.11.1",
-		"@types/jasmine": "~3.5.0",
-		"@types/jasminewd2": "~2.0.3",
-		"codelyzer": "^5.1.2",
-		"jasmine-core": "~3.5.0",
-		"jasmine-spec-reporter": "~4.2.1",
-		"karma": "~4.3.0",
-		"karma-chrome-launcher": "~3.1.0",
-		"karma-coverage-istanbul-reporter": "~2.1.0",
-		"karma-jasmine": "~2.0.1",
-		"karma-jasmine-html-reporter": "^1.4.2",
-		"protractor": "~5.4.3",
-		"ts-node": "~8.3.0",
-		"tslint": "~5.18.0",
-		"typescript": "~3.7.5"
-	}
+  "name": "hsi",
+  "version": "0.0.0",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --proxy-config src/proxy.conf.json",
+    "build": "ng build",
+    "build:prod": "ng build --prod --base-href /",
+    "test": "ng test",
+    "lint": "ng lint --tslint-config=tslint-ci.json",
+    "lint:fix": "ng lint --fix --tslint-config=tslint-ci.json",
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "~11.2.5",
+    "@angular/cdk": "^11.2.4",
+    "@angular/common": "~11.2.5",
+    "@angular/compiler": "~11.2.5",
+    "@angular/core": "~11.2.5",
+    "@angular/flex-layout": "^11.0.0-beta.33",
+    "@angular/forms": "~11.2.5",
+    "@angular/material": "^11.2.4",
+    "@angular/material-moment-adapter": "^11.2.4",
+    "@angular/platform-browser": "~11.2.5",
+    "@angular/platform-browser-dynamic": "~11.2.5",
+    "@angular/router": "~11.2.5",
+    "@angular/service-worker": "~11.2.5",
+    "@ngx-translate/core": "^13.0.0",
+    "@ngx-translate/http-loader": "^6.0.0",
+    "@types/file-saver": "^2.0.1",
+    "angular-calendar": "^0.28.16",
+    "angular-file-saver": "^1.1.3",
+    "date-fns": "^2.14.0",
+    "jwt-decode": "^3.1.2",
+    "moment": "^2.24.0",
+    "ng-recaptcha": "^6.0.0",
+    "ngx-moment": "^5.0.0",
+    "ngx-translate-multi-http-loader": "^3.0.0",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.0.0",
+    "zone.js": "~0.11.3"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1102.4",
+    "@angular/cli": "~11.2.4",
+    "@angular/compiler-cli": "~11.2.5",
+    "@angular/language-service": "~11.2.5",
+    "@types/node": "^12.11.1",
+    "@types/jasmine": "~3.6.0",
+    "@types/jasminewd2": "~2.0.3",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~6.2.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.5"
+  }
 }
