--- a/front-end/webapp/package.json
+++ b/front-end/webapp/package.json
@@ -62,5 +62,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.5"
+  },
+  "resolutions": {
+    "webpack": "^5.0.0"
   }
 }
