tg-3404 modificar imports para que referencien el path alias en vez del absoluto

--- a/front-end/webapp/tsconfig.json
+++ b/front-end/webapp/tsconfig.json
@@ -28,6 +28,15 @@
 			"@presentation/*": [
 				"src/app/modules/presentation/*"
 			],
+			"@historia-clinica/*": [
+				"src/app/modules/historia-clinica/*"
+			],
+			"@institucion/*": [
+				"src/app/modules/institucion/*"
+			],
+			"@pacientes/*": [
+				"src/app/modules/pacientes/*"
+			]
 		}
 	},
 	"angularCompilerOptions": {
