tg-3404 agrega path alias para camas, material y turnos

--- a/front-end/webapp/tsconfig.json
+++ b/front-end/webapp/tsconfig.json
@@ -36,6 +36,15 @@
 			],
 			"@pacientes/*": [
 				"src/app/modules/pacientes/*"
+			],
+			"@camas/*": [
+				"src/app/modules/camas/*"
+			],
+			"@material/*": [
+				"src/app/modules/material/*"
+			],
+			"@turnos/*": [
+				"src/app/modules/turnos/*"
 			]
 		}
 	},
