tg-3446 modifica path de Dockerfile a hospital

--- a/ci/docker/nginx-jar/Dockerfile
+++ b/ci/docker/nginx-jar/Dockerfile
@@ -22,7 +22,7 @@ COPY nginx.conf /etc/nginx/sites-enabled/default
 WORKDIR /app
 COPY  *.jar .  
 
-COPY front-end-dist/sgh/ ./front-end
+COPY front-end-dist/hospital/ ./front-end
 COPY backoffice-dist/ ./backoffice
 
 
