tg-3411. Crear un módulo nuevo en hospitales centrado en cubejs

--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -40,6 +40,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>ar.lamansys</groupId>
+			<artifactId>sgx-dashboards</artifactId>
+			<version>${revision}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -202,7 +208,7 @@
 			<version>2.6.1.Final</version>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+    </dependencies>
 
 	<profiles>
 		<profile>
