--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -19,7 +19,9 @@
 	<modules>
 		<module>interoperability</module>
 		<module>hospital-api</module>
-    </modules>
+		<module>sgx-dashboards</module>
+		<module>sgx-shared</module>
+	</modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
