tg-3421 [BE] Crear proceso configurable que intente federar pacientes periódicamente

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -123,3 +123,19 @@ server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javasc
 
 # Paths para ser ignorados en la especificación OpenAPI
 springdoc.paths-to-exclude=/backoffice/**
+
+# ===============================
+# SCHEDULED JOBS
+# ===============================
+
+# Enable the execution of scheduled jobs
+scheduledjobs.enabled=true
+
+# Federate validated patients job
+scheduledjobs.federatepatients.enabled=true
+scheduledjobs.federatepatients.seconds=0
+scheduledjobs.federatepatients.minutes=0
+scheduledjobs.federatepatients.hours=3
+scheduledjobs.federatepatients.dayofmonth=*
+scheduledjobs.federatepatients.month=*
+scheduledjobs.federatepatients.dayofweek=*
