tg-3460 [BE] Implementar modulo Odontologia

--- a/back-end/pom.xml
+++ b/back-end/pom.xml
@@ -21,7 +21,8 @@
 		<module>hospital-api</module>
 		<module>sgx-dashboards</module>
 		<module>sgx-shared</module>
-	</modules>
+        <module>odontology</module>
+    </modules>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
