--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.pladema</groupId>
+			<artifactId>odontology</artifactId>
+			<version>${revision}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
