tg-3472 Usa Authorization Bearer

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -19,7 +19,7 @@ admin.password=${ADMIN_PASS:admin123}
 
 # ============= TOKEN ===========
 token.secret=${TOKEN_SECRET}
-token.header=X-Auth-Token
+token.header=Authorization
 
 # Tiempo en minutos
 token.expiration=${TOKEN_EXPIRATION:30}
@@ -120,3 +120,6 @@ server.compression.enabled=true
 # The comma-separated list of mime types that should be compressed
 server.compression.mime-types=text/html,text/xml,text/plain,text/css,text/javascript,application/javascript,application/json
 # Compress the response only if the response size is at least 1KB
+
+# Paths para ser ignorados en la especificación OpenAPI
+springdoc.paths-to-exclude=/backoffice/**
