tg-3466 Agrega servicio Snowstorm a modulo interoperability con dependencia a modulo sgx-shared

--- a/back-end/interoperability/pom.xml
+++ b/back-end/interoperability/pom.xml
@@ -112,6 +112,12 @@
             <version>0.9.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>ar.lamansys</groupId>
+            <artifactId>sgx-shared</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
