--- a/dba/liquibase/main.yml
+++ b/dba/liquibase/main.yml
@@ -92,3 +92,7 @@ databaseChangeLog:
 - include:
     file: incrementales-v1_13.yml
     relativeToChangelogFile: true
+
+- include:
+    file: incrementales-v1_14.yml
+    relativeToChangelogFile: true
