tg-3518 crea biblioteca odontology

--- a/front-end/apps/tsconfig.json
+++ b/front-end/apps/tsconfig.json
@@ -49,6 +49,10 @@
 	  "@extensions/*": [
         "projects/hospital/src/app/modules/extensions/*"
       ],
+      "odontology": [
+        "dist/odontology/odontology",
+        "dist/odontology"
+      ]
     }
 	},
 	"angularCompilerOptions": {
