--- a/front-end/apps/package.json
+++ b/front-end/apps/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve --proxy-config projects/hospital/src/proxy.conf.json",
     "build": "ng build",
     "build:prod": "ng build hospital --prod --base-href /",
+    "build:odontology": "ng build odontology",
     "test": "ng test",
     "lint": "ng lint --tslint-config=tslint-ci.json",
     "lint:fix": "ng lint --fix --tslint-config=tslint-ci.json",
@@ -58,6 +59,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
