tg-3510 Punto de extensión Pestaña paciente

--- a/front-end/apps/tsconfig.json
+++ b/front-end/apps/tsconfig.json
@@ -45,7 +45,10 @@
       ],
       "@turnos/*": [
         "projects/hospital/src/app/modules/turnos/*"
-      ]
+      ],
+	  "@extensions/*": [
+        "projects/hospital/src/app/modules/extensions/*"
+      ],
     }
 	},
 	"angularCompilerOptions": {
