--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -52,6 +52,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>net.pladema</groupId>
+			<artifactId>extensions</artifactId>
+			<version>${revision}</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
@@ -136,12 +142,6 @@
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
 			<version>2.6</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.10</version>
 		</dependency>
 
 		<dependency>
@@ -387,6 +387,7 @@
 					<outputFile>../../front-end/apps/projects/hospital/src/app/modules/api-rest/api-model.d.ts</outputFile>
 					<optionalAnnotations>
 						<annotation>javax.annotation.Nullable</annotation>
+						<annotation>org.springframework.lang.Nullable</annotation>
 					</optionalAnnotations>
 				</configuration>
 			</plugin>
