tg-3559. Mover ApiErrorMessageDto a libreria shared

--- a/back-end/hospital-api/pom.xml
+++ b/back-end/hospital-api/pom.xml
@@ -382,6 +382,7 @@
 						<pattern>net.pladema.**.controller.**Dto</pattern>
 						<pattern>net.pladema.**.masterdata.**Dto</pattern>
 						<pattern>net.pladema.hl7.**.dto.**Dto</pattern>
+						<pattern>ar.lamansys.**.dto.**Dto</pattern>
 					</classPatterns>
 					<outputKind>module</outputKind>
 					<outputFile>../../front-end/apps/projects/hospital/src/app/modules/api-rest/api-model.d.ts</outputFile>
