tg-3566 Mejora distribucion de propiedades de servicio Federar

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -175,3 +175,16 @@ app.data.sample.healthcareProfessionals[3].id=4
 app.data.sample.healthcareProfessionals[3].licenseNumber=1234
 app.data.sample.healthcareProfessionals[3].personId=6
 app.data.sample.healthcareProfessionals[3].isMedicalDoctor=false
+
+# ===============================
+# FEDERAR SERVICE
+# ===============================
+ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
+
+ws.federar.claims.iss=http://www.msal.gov.ar
+ws.federar.claims.sub=Ministerio de Salud de la Nación
+ws.federar.claims.name=Prueba Jose
+ws.federar.claims.role=Project Manager
+ws.federar.claims.ident=0001
+
+ws.federar.auth.signKey=federar
