--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -10,7 +10,12 @@ token.expiration=${TOKEN_EXPIRATION:20}
 # Modules
 # ===============================
 ws.renaper.enabled = true
+
+# ===============================
+# FEDERAR SERVICE
+# ===============================
 ws.federar.enabled = true
+ws.federar.url.base=https://federador.msal.gob.ar
 
 
 google.recaptcha.enable = true
