--- a/back-end/hospital-api/src/test/resources/swagger-test.properties
+++ b/back-end/hospital-api/src/test/resources/swagger-test.properties
@@ -70,7 +70,9 @@ actuator.configuration.authenticated=${ACTUATOR_REQUIRED_AUTHENTICATION:false}
 #========= RENAPER ==========#
 ws.renaper.tokenExpiration=15
 ws.renaper.dominio
-ws.federar.claims.iss=http://www.msal.gov.ar
+
+#========= FEDERAR ==========#
+ws.federar.url.login=/bus-auth/auth
 
 # ===============================
 # reCaptcha Google
