--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -139,3 +139,17 @@ scheduledjobs.federatepatients.hours=3
 scheduledjobs.federatepatients.dayofmonth=*
 scheduledjobs.federatepatients.month=*
 scheduledjobs.federatepatients.dayofweek=*
+
+# ===============================
+# FEDERAR SERVICE
+# ===============================
+
+ws.federar.url.login=/bus-auth/auth
+ws.federar.url.localIdSearch=/masterfile-federacion-service/fhir/Patient
+ws.federar.url.federate=/masterfile-federacion-service/fhir/Patient
+
+ws.federar.claims.aud=${ws.federar.url.base}${ws.federar.url.login}
+
+ws.federar.auth.grantType=client_credentials
+ws.federar.auth.scope=Patient/*.read,Patient/*.write
+ws.federar.auth.clientAssertionType=urn:ietf:params:oauth:client-assertion-type:jwt-bearer
