tg-3566 Mejora distribucion de propiedades de servicio Renaper

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -177,6 +177,11 @@ app.data.sample.healthcareProfessionals[3].personId=6
 app.data.sample.healthcareProfessionals[3].isMedicalDoctor=false
 
 # ===============================
+# RENAPER SERVICE
+# ===============================
+ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/api
+
+# ===============================
 # FEDERAR SERVICE
 # ===============================
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
