--- a/back-end/hospital-api/src/main/resources/application-qa.properties
+++ b/back-end/hospital-api/src/main/resources/application-qa.properties
@@ -5,6 +5,12 @@ token.secret=${TOKEN_SECRET:ultra_secret_token}
 google.recaptcha.enable = true
 
 # ===============================
+# RENAPER SERVICE
+# ===============================
+ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/api
+
+
+# ===============================
 # FEDERAR SERVICE
 # ===============================
 ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
