--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -153,3 +153,11 @@ ws.federar.claims.aud=${ws.federar.url.base}${ws.federar.url.login}
 ws.federar.auth.grantType=client_credentials
 ws.federar.auth.scope=Patient/*.read,Patient/*.write
 ws.federar.auth.clientAssertionType=urn:ietf:params:oauth:client-assertion-type:jwt-bearer
+
+# ===============================
+# RENAPER SERVICE
+# ===============================
+ws.renaper.dominio=DOMINIOSINAUTORIZACIONDEALTA
+
+ws.renaper.url.cobertura=/personas/cobertura
+ws.renaper.url.persona=/personas/renaper
