tg-3566 Mejora distribucion de propiedades de servicio Snowstorm

--- a/back-end/hospital-api/src/main/resources/application-dev.properties
+++ b/back-end/hospital-api/src/main/resources/application-dev.properties
@@ -193,3 +193,8 @@ ws.federar.claims.role=Project Manager
 ws.federar.claims.ident=0001
 
 ws.federar.auth.signKey=federar
+
+# ===============================
+# SNOWSTORM SERVICE
+# ===============================
+ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
