--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -12,5 +12,9 @@ ws.renaper.enabled = true
 ws.federar.enabled = true
 ws.federar.url.base=https://federador.msal.gob.ar
 
+# ===============================
+# SNOWSTORM SERVICE
+# ===============================
+ws.snowstorm.url.base:https://snowstorm.msal.gob.ar
 
 google.recaptcha.enable = true
