--- a/back-end/hospital-api/src/main/resources/application-qa.properties
+++ b/back-end/hospital-api/src/main/resources/application-qa.properties
@@ -23,3 +23,7 @@ ws.federar.claims.ident=0001
 
 ws.federar.auth.signKey=federar
 
+# ===============================
+# SNOWSTORM SERVICE
+# ===============================
+ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
