--- a/back-end/hospital-api/src/test/resources/swagger-test.properties
+++ b/back-end/hospital-api/src/test/resources/swagger-test.properties
@@ -77,3 +77,9 @@ google.recaptcha.secret.key=${RECAPTCHA_SECRET_KEY:test-key}
 google.recaptcha.site.key=${RECAPTCHA_PUBLIC_KEY:test-key}
 google.recaptcha.validator.url=https://www.google.com/recaptcha/api/siteverify
 google.recaptcha.enable=${RECAPTCHA_ENABLE:true}
+
+
+
+ws.snowstorm.url.base=https://snowstorm-test.msal.gob.ar
+ws.renaper.url.base=https://federador.msal.gob.ar/masterfile-federacion-service/api
+ws.federar.url.base=https://testapp.hospitalitaliano.org.ar
