--- a/back-end/extensions/pom.xml
+++ b/back-end/extensions/pom.xml
@@ -11,6 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
+    <groupId>ar.lamansys</groupId>
     <artifactId>extensions</artifactId>
     <description>HSI Extensiones</description>
 
