tg-3674 Fix en autenticacion de servicio Federar y ajuste de propiedades en ambiente QA
(cherry picked from commit 36e0c514fe41b6cb2c6996a9bc41ff3de955fc5f)

--- a/back-end/hospital-api/src/main/resources/application-prod.properties
+++ b/back-end/hospital-api/src/main/resources/application-prod.properties
@@ -15,6 +15,6 @@ ws.federar.url.base=https://federador.msal.gob.ar
 # ===============================
 # SNOWSTORM SERVICE
 # ===============================
-ws.snowstorm.url.base:https://snowstorm.msal.gob.ar
+ws.snowstorm.url.base=https://snowstorm.msal.gob.ar
 
 google.recaptcha.enable = true
