--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -154,6 +154,7 @@ scheduledjobs.updateethnicities.dayofweek=*
 # ===============================
 
 ws.federar.url.login=/bus-auth/auth
+ws.federar.url.validateToken=/bus-auth/tokeninfo
 ws.federar.url.localIdSearch=/masterfile-federacion-service/fhir/Patient
 ws.federar.url.federate=/masterfile-federacion-service/fhir/Patient
 
