tg-3605 [BE] Crear cron job para actualizar periódicamente los datos maestros de etnias

--- a/back-end/hospital-api/src/main/resources/application.properties
+++ b/back-end/hospital-api/src/main/resources/application.properties
@@ -140,6 +140,15 @@ scheduledjobs.federatepatients.dayofmonth=*
 scheduledjobs.federatepatients.month=*
 scheduledjobs.federatepatients.dayofweek=*
 
+# Update SNOMED ethnicities master data job
+scheduledjobs.updateethnicities.enabled=true
+scheduledjobs.updateethnicities.seconds=0
+scheduledjobs.updateethnicities.minutes=0
+scheduledjobs.updateethnicities.hours=0
+scheduledjobs.updateethnicities.dayofmonth=15
+scheduledjobs.updateethnicities.month=*
+scheduledjobs.updateethnicities.dayofweek=*
+
 # ===============================
 # FEDERAR SERVICE
 # ===============================
