--- a/back-end/hospital-api/src/main/resources/application-qa.properties
+++ b/back-end/hospital-api/src/main/resources/application-qa.properties
@@ -2,13 +2,11 @@
 internment.document.directory = ${DOCUMENT_ROOT_DIRECTORY:/sgh}
 token.secret=${TOKEN_SECRET:ultra_secret_token}
 
-google.recaptcha.enable = true
-
 # ===============================
 # FEDERAR SERVICE
 # ===============================
 ws.federar.claims.iss=http://www.msal.gov.ar
-ws.federar.claims.sub=Ministerio de Salud de la Nación
+ws.federar.claims.sub=Ministerio de Salud de la Naciï¿½n
 ws.federar.claims.name=Prueba Jose
 ws.federar.claims.role=Project Manager
 ws.federar.claims.ident=0001
