--- a/front-end/backoffice/package.json
+++ b/front-end/backoffice/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "date-fns": "^2.21.3",
     "prop-types": "^15.7.2",
     "ra-data-json-server": "^3.5.0",
     "react": "^16.13.1",
