--- a/back-end/app/src/main/resources/application-tandil.properties
+++ b/back-end/app/src/main/resources/application-tandil.properties
@@ -3,3 +3,15 @@
 # Flavor
 # ===============================
 app.flavor = tandil
+
+
+# ===============================
+# Modules
+# ===============================
+ws.renaper.enabled=false
+ws.renaper.url.base=https://renaper.com
+
+ws.federar.enabled=false
+ws.federar.url.base=https://federar.com
+
+
