tg-3800 [P1] Fix error en código de dependencia

--- a/dba/liquibase/incrementales-v1_16.yml
+++ b/dba/liquibase/incrementales-v1_16.yml
@@ -69,4 +69,12 @@ databaseChangeLog:
             referencedTableName: dependency
             validate: true
 
+    - changeSet:
+        id: dependency-fixCodeValue
+        author: tmedina
+        context: "!schema-only"
+        changes:
+        - sql:
+            sql: |-
+                UPDATE dependency SET code = '25' WHERE description='Universitario público';
 
