tg-3840. Crear módulo para realizar autenticaciónes por api-key

--- a/back-end/app/src/main/resources/application.properties
+++ b/back-end/app/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = WEB 
 # ===============================
-
+spring.main.allow-bean-definition-overriding=true
 #spring.jpa.show-sql=true
 
 # ============= API =============
