tg-3860 Fix error 400 al crear institucion por Backoffice

--- a/dba/liquibase/incrementales-v1_16.yml
+++ b/dba/liquibase/incrementales-v1_16.yml
@@ -268,3 +268,12 @@ databaseChangeLog:
             sql: |-
                 UPDATE dependency SET code = '25' WHERE description='Universitario público';
 
+    - changeSet:
+        id: institution_phonenumber-modifyDataType
+        author: saguero
+        changes:
+        - modifyDataType:
+            columnName: phone_number
+            newDataType: varchar(35)
+            tableName: institution
+
